[package]
name = "nors"
version = "0.1.0"
authors = ["booink.work@gmail.com"]
edition = "2018"
description = "nors is a Rust program for counting the number of rows and records in a CSV file."
keywords = ["csv", "counter", "wc"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "nors"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
csv = "*"
anyhow = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "nors"
harness = false
