[package]
name = "nors"
version = "0.1.0"
authors = ["booink <booink.work@gmail.com>"]
edition = "2021"
description = "nors is a Rust program for counting the number of rows and records in a CSV file."
keywords = ["csv", "counter", "wc"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/booink/nors"
readme = "README.md"

[[bin]]
name = "nors"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
csv = "^1.1"
anyhow = "^1.0"
thiserror = "1"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "nors"
harness = false